--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,24 +1,25 @@
 server {
     listen 80;
+    server_name _;
 
     gzip on;
     gzip_types      text/plain application/xml application/javascript;
     gzip_min_length 1000;
 
-    root "/var/www/html";
+    root "/var/www/app/public";
 
     index index.html index.htm index.php;
 
     charset utf-8;
 
     location / {
-        try_files /index.php?$query_string;
+        try_files index.html /index.php?$query_string;
     }
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
-    access_log /var/log/nginx/access.log access;
+    access_log /var/log/nginx/access.log;
     error_log  /var/log/nginx/error.log error;
 
     sendfile off;
