--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -13,7 +13,7 @@ server {
     charset utf-8;
 
     location / {
-        try_files index.html /index.php?$query_string;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     location = /favicon.ico { access_log off; log_not_found off; }
